@@ -1,3 +1,7 @@
+2011-08-30 Philipp Gampe <forge.typo3.org@philippgampe.info>
+
+	* [TASK] Release linkvalidator 1.0.4
+
 2011-08-26 Philipp Gampe <forge.typo3.org@philippgampe.info>
 
 	* [BUGFIX] Fatal error with E_STRICT: Declaration of fetchType must be compatible with interface
